--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,105 @@ form {
 input, label {
   font-size: 1rem;
 }
+
+/*Panel de accesibilidad*/
+.accessibility-wrapper {
+  display: inline-block;
+  position: relative;
+}
+
+#accessibilityToggle {
+  background: transparent;
+  color: white;
+  font-size: 1.5rem;
+  border: none;
+  cursor: pointer;
+}
+
+#accessibilityPanel {
+  position: absolute;
+  right: 0;
+  top: 2.5rem;
+  background-color: #005a9c;
+  color: black;
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+  z-index: 1000;
+}
+
+#accessibilityPanel button {
+  font-size: 0.9rem;
+  padding: 0.3rem;
+  background-color: #13125f;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+#accessibilityPanel button:hover {
+  background-color: #ddd;
+}
+
+.hidden {
+  display: none;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: #f1f1f1;
+}
+
+.dark-mode header {
+  background-color: #1a1a1a;
+}
+
+.dark-mode a {
+  color: #80cbc4;
+}
+
+.high-contrast {
+  background-color: black !important;
+  color: yellow !important;
+}
+
+.high-contrast a {
+  color: cyan !important;
+}
+
+.no-images img {
+  display: none !important;
+}
+
+.highlight-links a {
+  background-color: yellow;
+  color: black;
+  font-weight: bold;
+  padding: 0.2rem;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.colorblind-mode {
+  filter: contrast(1.2) saturate(1.4);
+}
+
+/*Cursor*/
+form, 
+form input, 
+form select, 
+form button, 
+form label {
+    cursor: crosshair;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    cursor: text;
+}
+
+.accessibility-btn {
+    cursor: default;
+}
